examples/invalid/extra_pow_arg.mini
# Ошибка: лишний аргумент в pow
pow(2,3,4)
